simple and constrained cartesian product updated to for sequence.